# quip

./: .gitattributes  .gitmodules  404.html  Makefile  README.md  dune-project  index.html  intro.html  print.html  quip.opam  quip.sh  searchindex.js  searchindex.json
examples/: NEQ004_size4.quip  dune  eq_diamond10.quip  eq_diamond10_sc.quip  run.py  test-016.smt2  test_ite_1.quip
examples/out-proofs-2021-12-27T20:48/: pb-sidekick-dev-p-NEQ004_size4.smt2  pb-sidekick-dev-p-NEQ032_size5.smt2  pb-sidekick-dev-p-NEQ041_size7.smt2  pb-sidekick-dev-p-PEQ011_size7.smt2  pb-sidekick-dev-p-PEQ012_size3.smt2  pb-sidekick-dev-p-QF_UF_brp2.1.prop3_ab_reg_max.smt2  pb-sidekick-dev-p-QF_UF_cambridge.7.prop2_ab_reg_max.smt2  pb-sidekick-dev-p-SEQ017_size5.smt2  pb-sidekick-dev-p-SEQ035_size4.smt2  pb-sidekick-dev-p-clocksynchro_2clocks.worst_case_skew.base.smt2  pb-sidekick-dev-p-clocksynchro_9clocks.main_invar.base.smt2  pb-sidekick-dev-p-cong_fff.smt2  pb-sidekick-dev-p-cong_fff_conditional.smt2  pb-sidekick-dev-p-cong_fff_conditional4.smt2  pb-sidekick-dev-p-cong_fff_conditional6.smt2  pb-sidekick-dev-p-data_acycl1.smt2  pb-sidekick-dev-p-data_acycl_if.smt2  pb-sidekick-dev-p-data_card1.smt2  pb-sidekick-dev-p-diamond2_cong_if.smt2  pb-sidekick-dev-p-eq_diamond10.smt2  pb-sidekick-dev-p-eq_diamond100.smt2  pb-sidekick-dev-p-eq_diamond15.smt2  pb-sidekick-dev-p-eq_diamond17.smt2  pb-sidekick-dev-p-eq_diamond2.smt2  pb-sidekick-dev-p-eq_diamond20.smt2  pb-sidekick-dev-p-eq_diamond3.smt2  pb-sidekick-dev-p-eq_diamond30.smt2  pb-sidekick-dev-p-eq_diamond4.smt2  pb-sidekick-dev-p-eq_diamond50.smt2  pb-sidekick-dev-p-eq_diamond70.smt2  pb-sidekick-dev-p-gensys_icl015.smt2  pb-sidekick-dev-p-gensys_icl1272.smt2  pb-sidekick-dev-p-if_ff_fg.smt2  pb-sidekick-dev-p-iso_icl527.smt2  pb-sidekick-dev-p-iso_icl_nogen_sk002.smt2  pb-sidekick-dev-p-named_term.smt2  pb-sidekick-dev-p-nested_if.smt2  pb-sidekick-dev-p-pb_real_30_0600_10_18.smt2  (+36 more)
src/main/: dot.ml  (+3 more)
(+63 files in other folders)
