
(env
  (_ (flags :standard -open Quip_core -open Common -open Quip_util)))

(executable
  (name quip)
  (public_name quip)
  (modules quip)
  (libraries quip.core quip.util quip.check trustee.core
             smtlib-utils containers ppx_deriving.runtime)
  (preprocess (pps ppx_deriving.std)))

(executable
  (name quip_dot)
  (public_name quip-dot)
  (modules quip_dot)
  (libraries quip.core quip.util trustee.core
             smtlib-utils containers ppx_deriving.runtime)
  (preprocess (pps ppx_deriving.std)))
